# torsade

./: .gitignore  ATTRIBUTION.md  CITATION.cff  DATASHEET.md  Makefile  README.md  manifest.csv  manifest.json  pyproject.toml
docs/: ARCHITECTURE.md  GENERATION.md  LABEL_SCHEMA.md
recipes/: corpus.yaml
reports/: torsade_v1_corpus_report.md
scripts/: download_sources.py  export_corpus.py  generate.py  make_figures.py  select_sources.py
scripts/reports/: generate_corpus_report.py
src/artefaux/: __init__.py  amplitude.py  build.py  cli.py  constants.py  corpus.py  electrode_domain.py  engineering.py  labels.py  loaders.py  manifest.py  mixing.py  noise_shapes.py  precordial.py  provenance.py  recipes.py  selection.py  synthetic.py  writer.py
tests/: conftest.py  test_amplitude.py  test_corpus_integration.py  test_electrode_domain.py  test_engineering.py  test_labels.py  test_loaders.py  test_mixing.py  test_precordial.py  test_provenance.py  test_recipes.py  test_report_generator.py  test_resolve_source_ids.py  test_selection.py  test_writer.py
